--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="utf-8">
-  <title>מסיבת הולדת לדניאל</title>
+  <title>חגיגת הולדת לדניאל</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.png">
-  <meta property="og:title" content="מסיבת הולדת לדניאל" />
+  <meta property="og:title" content="חגיגת הולדת לדניאל" />
   <meta property="og:url" content="https://daniel.geek.co.il" />
   <meta property="og:image" content="https://daniel.geek.co.il/assets/invitation.jpeg" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
